--- a/life_cycle/index.html
+++ b/life_cycle/index.html
@@ -10,6 +10,7 @@
     <!-- p5.js core (1.10.0) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
 
+    <script src="./intro.js"></script>
     <script src="./sketch.js"></script>
   </head>
 
