--- a/life_cycle/index.html
+++ b/life_cycle/index.html
@@ -11,7 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
 
     <script src="./intro.js"></script>
-    <script src="./coreEnergy.js"></script>
+    <script src="./coreEnergyA.js"></script>
+    <!-- <script src="./coreEnergyA.js"></script> -->
     <script src="./sketch.js"></script>
   </head>
 
