--- a/life_cycle/index.html
+++ b/life_cycle/index.html
@@ -7,8 +7,9 @@
 
     <script src="http://127.0.0.1:8081/socket.io/socket.io.js"></script>
 
-    <!-- p5.js core (1.10.0) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
+    <!-- p5 + p5.sound same versions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
 
     <script src="./intro.js"></script>
     <script src="./coreEnergyA.js"></script>
