--- a/life_cycle/index.html
+++ b/life_cycle/index.html
@@ -17,7 +17,7 @@
     <script src="./coreEnergyA.js"></script>
     <!-- <script src="./coreEnergyB.js"></script> -->
 
-    <!-- Claude Version to se if can work other way-->
+    <!-- TODO : check Claude Version to see if can work other way be faster -->
     <!-- <script src="./smokeCore.js"></script> -->
     <script src="./sketch.js"></script>
   </head>
@@ -50,7 +50,7 @@
 
     <script>
       // unlockAudio() is defined on sketch.js.
-      // Al hacer clic, we call teh sound
+      // On click, we call the sound function.
       document.getElementById('audio-btn').addEventListener(
         'click',
         async () => {
